# itRWR

./: .travis.yml  Dockerfile  README.md  README.rst  community.py  create_config_seed_files.py  environment.yml  requirements.txt  run_community_ID.py  setup.cfg  setup.py
.github/: ci.yml
.github/workflows/: run-tests.yml
ToyExample/: community.py  config_740.yml  run.py  seeds_740.txt
ToyExample/multiplex/1/: Coexpression.tsv  Diseases_involvement.tsv  PPI.tsv  Pathways.tsv
ToyExample/results_10_740/: config.yml  multiplex_1.tsv  seeds_740.txt
data/: orpha_codes_PA.txt
itRWR/: __init__.py  community.py  create_config_seed_files.py  run_community_ID.py
itRWR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: create_config_seed_files.py  orpha_codes_toy_ex.txt  run_community_ID.py
test/multiplex/1/: Complexes.tsv
