[metadata]
description-file = README.rst
author = Cécile Beust, Anthony Baptista, Ozan Ozisik, Anaïs Baudot
email = cecile.beust@etudiant.univ-rennes.fr, anthony.baptista@qmul.ac.uk, ozan.OZISIK@univ-amu.fr
copyright = Copyright (c) 2023: Cécile Beust, Anthony Baptista, ozan.Ozisik,  Anaïs Baudot
license = MIT

[easy_install]

